--- a/assets/scss/vars/_fontSize.scss
+++ b/assets/scss/vars/_fontSize.scss
@@ -5,11 +5,17 @@ $header-m: 1.6rem;
 $header-s: 1.4rem;
 $header-xs: 1.2rem;
 
-$x2s: 0.4rem;
-$xs: 0.6rem;
-$s: 0.8rem;
-$m: 1rem;
-$l: 1.2rem;
-$xl: 1.6rem;
-$x2l: 2rem;
+
 $x3l: 4rem;
+$x2l: 2rem;
+$xl: 1.6rem;
+$l: 1.2rem;
+$m: 1rem;
+$s: 0.8rem;
+$xs: 0.6rem;
+$x2s: 0.4rem;
+
+$static-x2s: 8px;
+$static-xs: 12px;
+$static-s: 16px;
+$static-m: 20px;
