--- a/assets/scss/primevue/Dialog.scss
+++ b/assets/scss/primevue/Dialog.scss
@@ -8,8 +8,14 @@
     --p-dialog-header-padding: 24px 64px;
     --p-dialog-content-padding: 0 64px 24px;
 
+    max-width: 100vw;
+
     & .p-dialog-close-button {
       @include relative((right: -10px));
+    }
+
+    & .p-dialog-content > * {
+      max-width: 100%;
     }
   }
 }
