--- a/assets/scss/primevue/Divider.scss
+++ b/assets/scss/primevue/Divider.scss
@@ -7,6 +7,6 @@
     --p-divider-horizontal-margin: 0.6rem 0;
     width: var(--width, 100%);
     height: 2px;
-    background-color: vars.$colors-black;
+    background-color: var(--dividerBackgroundColor, #{vars.$colors-black});
   }
 }
