--- a/assets/scss/primevue/Tabs.scss
+++ b/assets/scss/primevue/Tabs.scss
@@ -23,6 +23,8 @@
     --p-tabs-tablist-border-color: transparent;
     --p-tabs-active-bar-height: 0;
 
+    overflow: scroll;
+
     & .p-tablist-tab-list {
       gap: 16px;
     }
