--- a/assets/scss/vars/_colors.scss
+++ b/assets/scss/vars/_colors.scss
@@ -2,8 +2,8 @@ $black: #1B1B1B;
 $greyMuted: #8A8A8A;
 $greyBackground: #EAE8E7;
 $greyDark: #3E3E3E;
-$greyLight: #565555;
-$greyExtraLight: #EEEEEE;
+$grey: #565555;
+$greyLight: #EEEEEE;
 $white: #FFFFFF;
 $beige: #CDAA74;
 $beigeMuted: #C9C2B4;
