--- a/assets/scss/vars/_index.scss
+++ b/assets/scss/vars/_index.scss
@@ -5,3 +5,4 @@
 @forward './fontWeight.scss' as fw-*;
 @forward './gaps.scss' as gaps-*;
 @forward './rest.scss' as rest-*;
+@forward './shadows.scss' as shadows-*;
