--- a/assets/scss/vars/_colors.scss
+++ b/assets/scss/vars/_colors.scss
@@ -1,10 +1,10 @@
+$bg: #EAE8E7;
 $black: #1B1B1B;
-$greyMuted: #8A8A8A;
-$greyBackground: #EAE8E7;
-$greyDark: #3E3E3E;
-$grey: #565555;
-$greyLight: #EEEEEE;
 $white: #FFFFFF;
+$grey: #565555;
+$greyDark: #3E3E3E;
+$greyMuted: #8A8A8A;
+$greyLight: #EEEEEE;
 $beige: #CDAA74;
 $beigeMuted: #C9C2B4;
 $red: #C66767;
@@ -13,5 +13,3 @@ $red: #C66767;
 $scrollbar: rgba(#000000, 20%);
 
 $menuBackgroundGrey: #EAE8E7;
-$baseShadow: rgba(0, 0, 0, 0.06);
-$popupShadow: rgba(27, 27, 27, 0.25);
