--- a/assets/scss/primevue/Dialog.scss
+++ b/assets/scss/primevue/Dialog.scss
@@ -7,6 +7,7 @@
     --p-dialog-background: #{vars.$colors-bg};
     --p-dialog-header-padding: 24px 64px;
     --p-dialog-content-padding: 0 64px 24px;
+    --p-dialog-color: var(--p-surface-700);
 
     max-width: 100vw;
 
