--- a/assets/scss/vars/_gaps.scss
+++ b/assets/scss/vars/_gaps.scss
@@ -1,3 +1,4 @@
+$x2s: 4px;
 $xs: 8px;
 $s: 10px;
 $m: 24px;
@@ -5,3 +6,5 @@ $l: 40px;
 $xl: 48px;
 
 $adaptive-s: 1rem;
+$adaptive-m: 1.5rem;
+$adaptive-l: 4rem;
