--- a/assets/scss/primevue/Button.scss
+++ b/assets/scss/primevue/Button.scss
@@ -12,7 +12,7 @@
     --labelFontSize:  #{vars.$fs-static-m};
 
 
-    --p-button-gap: 8px;
+    --p-button-gap: #{vars.$gaps-xs};
     --p-button-padding-x: 12px;
     --p-button-padding-y: 12px;
 
