Частично подлатал аккаунт под мобилу

--- a/assets/scss/primevue/InputText.scss
+++ b/assets/scss/primevue/InputText.scss
@@ -6,12 +6,21 @@
   .InputText {
     --p-inputtext-focus-border-color: none;
     height: 48px;
+
+    &,
+    &::placeholder {
+      font-size: var(--inputFontSize, #{vars.$fs-static-s});
+    }
+
+    &::placeholder {
+      opacity: 0.5;
+    }
   }
 
   @include mobile {
     .InputText {
       height: 44px;
-      font-size: vars.$fs-static-xs;
+      --inputFontSize: #{vars.$fs-static-xs};
     }
   }
 }
