--- a/assets/scss/primevue/ScrollPanel.scss
+++ b/assets/scss/primevue/ScrollPanel.scss
@@ -15,7 +15,7 @@
     }
     & .p-scrollpanel-content {
       @include flex((
-        gap: var(--scrollPanelGap, #{vars.$gaps-l}),
+        gap: var(--scrollPanelGap, #{vars.$gaps-g40}),
         flex-wrap: wrap,
       ));
       padding-inline: 20px;
