--- a/assets/scss/primevue/Button.scss
+++ b/assets/scss/primevue/Button.scss
@@ -9,7 +9,7 @@
   }
 
   .Button {
-    --labelFontSize:  #{vars.$fs-static-m};
+    --labelFontSize: var(--staticFontSize-M-S);
 
 
     --p-button-gap: #{vars.$gaps-g8};
@@ -82,17 +82,16 @@
 
   @include mobile {
     .Button {
-      --labelFontSize:  #{vars.$fs-static-s};
       --p-button-border-radius: #{vars.$br-xs};
       justify-content: space-between;
       border-width: 2px;
       height: 40px;
+      --iconStroke: #{vars.$colors-beige};
 
       --p-button-secondary-background: transparent;
       --p-button-secondary-hover-background: transparent;
       --p-button-secondary-active-background: transparent;
       --p-button-secondary-border-color: #{vars.$colors-beige};
-      --iconStroke: #{vars.$colors-beige};
       --p-button-secondary-hover-border-color: #{vars.$colors-beige};
       --p-button-secondary-active-border-color: #{vars.$colors-beige};
       --p-button-secondary-color: #{vars.$colors-beige};
