Страница заказа игры + много правок

--- a/assets/scss/vars/_colors.scss
+++ b/assets/scss/vars/_colors.scss
@@ -1,4 +1,4 @@
-$bg: #EAE8E7;
+// main
 $black: #1B1B1B;
 $white: #FFFFFF;
 $grey: #565555;
@@ -9,7 +9,6 @@ $beige: #CDAA74;
 $beigeMuted: #C9C2B4;
 $red: #C66767;
 
-
+// specific
 $scrollbar: rgba(#000000, 20%);
-
-$menuBackgroundGrey: #EAE8E7;
+$bg: #EAE8E7;
