--- a/assets/scss/primevue/index.scss
+++ b/assets/scss/primevue/index.scss
@@ -1,10 +1,10 @@
-@use './Avatar.scss';
-@use './Badge.scss';
-@use './Button.scss';
-@use './Chip.scss';
-@use './Dialog.scss';
-@use './Divider.scss';
-@use './InputText.scss';
-@use './Paginator.scss';
-@use './RadioButton.scss';
-@use './Tabs.scss';
+@use './Avatar';
+@use './Badge';
+@use './Button';
+@use './Chip';
+@use './Dialog';
+@use './Divider';
+@use './InputText';
+@use './Paginator';
+@use './RadioButton';
+@use './Tabs';
